writerfilter/source/dmapper/PropertyMap.hxx
@@ -265,6 +265,8 @@ public:
             sal_Int32 nValue );
 
     void CloseSectionGroup( DomainMapper_Impl& rDM_Impl );
+    /// Handling of margins, header and footer for any kind of sections breaks.
+    void HandleMarginsHeaderFooter(DomainMapper_Impl& rDM_Impl);
 };
 typedef boost::shared_ptr<SectionPropertyMap> SectionPropertyMapPtr;
 
